Ajout altitude et correction via google elevation

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -1,103 +1,1 @@
-SELECT_CONTACT_BY_ID=SELECT \
-id, \
-nom, \
-prenom, \
-numeroTel, \
-email, \
-commentaire, \
-note \
-FROM ressource \
-WHERE id = ?; 
-
-SELECT_CONTACTSUMUP_BY_ID=SELECT \
-ressource.id as id, \
-nom, \
-prenom, \
-dateNaissance, \
-debutTravail as dateDebutTravail, \
-idMetier, \
-metier.metier as metier, \
-competence.id as idSpecialite, \
-competence.competence as specialite \
-FROM ressource \
-JOIN metier on metier.id = ressource.idMetier \
-JOIN competence on competence.id = ressource.idSpecialite \
-WHERE ressource.id = ?;
-
-SELECT_CONTACTSUMUP=SELECT \
-ressource.id as id, \
-nom, \
-prenom, \
-dateNaissance, \
-debutTravail as dateDebutTravail, \
-idMetier, \
-metier.metier as metier, \
-competence.id as idSpecialite, \
-competence.competence as specialite \
-FROM ressource \
-JOIN metier on metier.id = ressource.idMetier \
-JOIN competence on competence.id = ressource.idSpecialite order by nom asc;
-
-SELECT_CONTACTS=SELECT \
-id, \
-nom, \
-prenom, \
-numeroTel, \
-email, \
-commentaire, \
-note \
-FROM ressource;
-
-
-SELECT_COMPETENCE_BY_ID=SELECT \
-id, \
-competence \
-FROM competence \
-WHERE id = ? order by competence asc; 
-
-
-SELECT_CLIENTS=SELECT \
-id, \
-nomClient \
-FROM client order by nomClient asc; 
-
-
-SELECT_CLIENT_BY_ID=SELECT \
-id, \
-nomClient \
-FROM client \
-where id = ? \
-order by nomClient asc; 
-
-SELECT_COMPETENCES=SELECT \
-id, \
-competence \
-FROM competence order by competence asc;
-
-SELECT_CONTACT_EXPERIENCE_BY_ID=SELECT \
-competence.id, \
-competence \
-from competence \
-join experience on  experience.idCompetence= competence.id \
-join ressource on ressource.id = experience.idRessource \
-where ressource.id = ? order by competence asc;
-
-SELECT_CONTACT_MISSION_BY_ID=SELECT \
-idRessource, \
-idClient, \
-dateDebut, \
-dateFin, \
-mission.commentaire as commentaire, \
-client.nomClient as nomClient, \
-formation.description, \
-formation.id as idFormation, \
-formation.code as codeFormation, \
-mission.note as note, \
-competence.id as idCompetence, \
-competence.competence as libelleCompetence \
-from ressource \
-join mission on mission.idRessource = ressource.id \
-join client on client.id = mission.idClient \
-left join formation on formation.id = mission.idFormation \
-left join competence on formation.idCompetence = competence.id \
-where ressource.id = ? order by dateDebut asc;
+-- NO QUERY
